# basix

./: .clang-tidy  .gitignore  BasixConfig.cmake.in  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  build-requirements.txt  finite-element.cpp  finite-element.h  lagrange.cpp  lagrange.h  lattice.cpp  lattice.h  main.cpp  nedelec.cpp  nedelec.h  plot_lagrange.py  plot_nedelec.py  plot_rt.py  plot_tp.py  polyn.h  polynomial.cpp  polynomial.h  pyproject.toml  quadrature.cpp  quadrature.h  raviart-thomas.cpp  raviart-thomas.h  setup.cfg  setup.py  simplex.cpp  simplex.h  sonar-project.properties  tabulate.cpp  tabulate.h  update_version.py  (+2 more)
.github/: dependabot.yml
.github/workflows/: build-wheels.yml  clang-tidy.yml  cmake.yml  dolfin-tests.yml  dolfinx-tests.yml  fenicsx-refs.env  ffcx-tests.yml  intel.yml  mac.yml  pythonapp.yml  redhat.yml  sonarcloud.yml  spack.yml  valgrind.yml  windows.yml
basix/: _basixcpp.pyi
cpp/: BasixConfig.cmake.in  CMakeLists.txt  basix.cpp  basix.h  brezzi-douglas-marini.cpp  brezzi-douglas-marini.h  cell.cpp  cell.h  crouzeix-raviart.cpp  crouzeix-raviart.h  defines.cpp  defines.h  docs.template  dof-permutations.cpp  dof-permutations.h  dof-transformations.h  element-families.cpp  element-families.h  finite-element.cpp  finite-element.h  generate_docs.py  indexing.h  integral-moments.cpp  integral-moments.h  lagrange.cpp  lagrange.h  lattice.cpp  lattice.h  libtab.cpp  libtab.h  log.cpp  log.h  loguru.cpp  loguru.hpp  mappings.cpp  mappings.h  moments.cpp  moments.h  nc-rtc.cpp  nc-rtc.h  (+30 more)
cpp/basix/: __init__.py  basix.cpp  basix.h  brezzi-douglas-marini.cpp  brezzi-douglas-marini.h  bubble.cpp  bubble.h  cell.cpp  cell.h  crouzeix-raviart.cpp  cwrapper.cpp  cwrapper.h  docs.h  docs.h.in  dof-transformations.cpp  dof-transformations.h  e-DeRham.h  e-brezzi-douglas-marini.cpp  e-brezzi-douglas-marini.h  e-bubble.cpp  e-bubble.h  e-crouzeix-raviart.cpp  e-crouzeix-raviart.h  e-hermite.cpp  e-hermite.h  e-hhj.cpp  e-hhj.h  e-lagrange.cpp  e-lagrange.h  e-nce-rtc.cpp  e-nce-rtc.h  e-nedelec.cpp  e-nedelec.h  e-raviart-thomas.cpp  e-raviart-thomas.h  e-regge.cpp  e-regge.h  e-serendipity.cpp  e-serendipity.h  element-families.cpp  (+51 more)
cpp/core/: CMakeLists.txt  array2d.h  cell.cpp  cell.h  dof-permutations.cpp  dof-permutations.h  dof-transformations.cpp  dof-transformations.h  element-families.cpp  element-families.h  finite-element.cpp  finite-element.h  indexing.h  lattice.cpp  loguru.hpp  mappings.cpp  mappings.h  moments.cpp  moments.h  ndarray.h  polyset.cpp  polyset.h  quadrature.cpp  quadrature.h
cpp/doc/: Doxyfile  index.md
cpp/elements/: CMakeLists.txt  brezzi-douglas-marini.cpp  brezzi-douglas-marini.h  bubble.cpp  bubble.h  crouzeix-raviart.cpp  crouzeix-raviart.h  lagrange.cpp  lagrange.h  nce-rtc.cpp  nce-rtc.h  nedelec.cpp  nedelec.h  raviart-thomas.cpp  raviart-thomas.h  regge.cpp  regge.h  serendipity.cpp  serendipity.h  update.py
cpp/libtab/: __init__.py
demo/: demo_create_and_tabulate.py  demo_dof_transformations.py  demo_facet_integral.py  demo_lagrange_variants.py  demo_quadrature.py  index.rst
demo/cpp/: CMakeLists.txt  conftest.py  main.cpp  test.py
demo/cpp/demo_create_and_tabulate/: CMakeLists.txt  main.cpp
demo/cpp/demo_dof_transformations/: CMakeLists.txt  main.cpp
demo/python/: conftest.py  convert_to_rst.py  demo_create_and_tabulate.py  demo_custom_element.py  demo_custom_element_conforming_cr.py  demo_dof_transformations.py  demo_facet_integral.py  demo_lagrange_variants.py  demo_quadrature.py  index.rst  test.py
doc/: Doxyfile  README.md  basis.md  index.md  install.md  intro.html  make_html.py  ruff.toml
doc/assets/: sty.css
doc/cpp/: Doxyfile  header.html  header.html.template  index.md
doc/python/source/: conf.py  index.rst  polyset-order.rst
doc/template/: intro.html  navbar.html  stylesheets.html
doc/web/: cpp-header.html  cpp-header.html.template  cpp-seo.html  index.md  make_html.py  polyset-order.md  python-layout.html.template  requirements.txt
doc/web/assets/: sty.css
doc/web/template/: intro.html  navbar.html  outro.html  title.html
img/: draw.py
joss/: Makefile  paper.bib  paper.md
joss/img/: draw.py
python/: CMakeLists.txt  README.md  README.rst  docs.h  docs.h.template  generate_docs.py  pattern_stub.txt  pyproject.toml  setup.py  wrapper.cpp
python/basix/: __init__.py  __init__.pyi  _basixcpp.pyi  cell.py  cell.pyi  enums.py  finite_element.py  finite_element.pyi  index.py  interpolation.py  lattice.py  lattice.pyi  maps.py  numba_helpers.py  numba_helpers.pyi  polynomials.py  polynomials.pyi  quadrature.py  quadrature.pyi  sobolev_spaces.py  sobolev_spaces.pyi  ufl.py  ufl.pyi  ufl_wrapper.py  ufl_wrapper.pyi  utils.py  variants.py  variants.pyi
python/doc/: Makefile
python/doc/source/: conf.py  index.rst
src/: CMakeLists.txt  crouzeix-raviart.h  defines.h  lagrange.h  nedelec-second-kind.cpp  nedelec-second-kind.h  nedelec.cpp  polynomial-set.h  quadrature.cpp  raviart-thomas.cpp  raviart-thomas.h  regge.cpp  regge.h  tp.cpp  wrapper.cpp
test/: __init__.py  test_bernstein.py  test_cell.py  test_continuity.py  test_cr.py  test_create.py  test_crouzeix-raviart.py  test_custom_element.py  test_docs.py  test_dof_ordering.py  test_dof_transformations.py  test_elements.py  test_entity_dofs.py  test_equality.py  test_hermite.py  test_include.py  test_interpolation.py  test_interpolation_between_elements.py  test_iso.py  test_lagrange.py  test_lattice.py  test_lexicographic.py  test_mappings.py  test_nedelec.py  test_nedelec_second_kind.py  test_numba.py  test_orthonormal_basis.py  test_orthonormal_basis_symbolic.py  test_permutations.py  test_polynomial.py  test_polynomials.py  test_quadrature.py  test_regge.py  test_rt.py  test_symbolic.py  test_tensor_products.py  test_timing.py  test_tp.py  test_ufl_wrapper.py  test_variants.py  (+4 more)
test/test_cmake/: CMakeLists.txt  main.cpp
