[build-system]
requires = ["scikit-build-core[pyproject]>=0.11", "nanobind>=2.5.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fenics-basix"
version = "0.12.0.dev0"
description = "Basix Python interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { email = "fenics-steering-council@googlegroups.com" },
    { name = "FEniCS Steering Council" },
]
dependencies = ["numpy>=2"]

[project.urls]
homepage = "https://fenicsproject.org"
repository = "https://github.com/fenics/basix.git"
documentation = "https://docs.fenicsproject.org"

[project.optional-dependencies]
docs = ["markdown", "pylit3", "pyyaml", "sphinx", "pydata-sphinx-theme"]
lint = ["ruff"]
optional = ["numba", "fenics-ufl@git+https://github.com/fenics/ufl"]
test = ["pytest", "sympy", "scipy", "matplotlib", "fenics-basix[optional]"]
test-no-numba = ["pytest", "sympy", "scipy", "matplotlib", "fenics-ufl@git+https://github.com/fenics/ufl"]
ci = ["mypy", "pytest-xdist", "fenics-basix[docs,lint,test,optional]"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.scikit-build]
wheel.packages = ["python/basix"]

[tool.scikit-build.cmake.define]
# Set to OFF to disable all install RPATH adjustments
BASIX_SET_INSTALL_RPATH = "ON"

[tool.cibuildwheel]
build-frontend = { name = "build", args = [
    "-Cwheel.py-api=cp312",
] }
build = [
    "cp3{11,12,13,14}-manylinux_x86_64",
    "cp3{11,12,13,14}-manylinux_aarch64",
    "cp3{11,12,13,14}-macosx_x86_64",
    "cp3{11,12,13,14}-macosx_arm64",
    "cp3{11,12,13,14}-win_amd64",
    "cp3{11,12,13,14}-win_arm64",
]
test-command = [
    "cmake -G Ninja -DPython3_EXECUTABLE=$(which python) -B build-dir -S {project}/test/test_cmake",
    "cmake --build build-dir/",
    "build-dir/a.out",
    "python -m pytest -n auto --durations 20 {project}/test/",
]
test-requires = ["pytest-xdist"]
test-extras = ["test"]

[tool.cibuildwheel.windows]
build-frontend = { name = "build", args = [
    "-Cwheel.py-api=cp312",
    "-Ccmake.args=-DINSTALL_RUNTIME_DEPENDENCIES=ON",
    "-Ccmake.args=-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake",
] }
test-command = ["python -m pytest -n auto --durations 20 {project}/test/"]

[tool.cibuildwheel.linux]
archs = [
    "native"
]
before-build = "yum -y update && yum install -y epel-release && yum install -y openblas-devel ninja-build"

[tool.cibuildwheel.macos]
environment = { "MACOSX_DEPLOYMENT_TARGET" = "10.14" }
archs = [
    "native",
]

# llvmlite (numba) is not built for x86_64 on macOS or arm64 on Windows.
[[tool.cibuildwheel.overrides]]
select = ["*-macosx_x86_64", "*-win_arm64"]
test-extras = ["test-no-numba"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
extend-exclude = ["./joss"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
exclude = ["joss/"]
select = [
    # "N", # pep8-naming
    "E",   # pycodestyle
    "W",   # pycodestyle
    "D",   # pydocstyle - used only in python/
    "F",   # pyflakes
    "I",   # isort
    "RUF", # Ruff-specific rules
    "UP",  # pyupgrade
    "ICN", # flake8-import-conventions
    "NPY", # numpy-specific rules
    "FLY", # use f-string not static joins
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    # "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    # "B", https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    # "A", # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
]
# ignore = ["UP007", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]
"demo/*" = ["D"]
"doc/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["basix", "ufl"]
